# OnscripterYuri

./: .gitignore  .gitmodules  1.txt  AVIWrapper.cpp  AnimationInfo.cpp  AnimationInfo.h  CMakeLists.txt  CMakePresets.json  DirectReader.h  FontInfo.h  LUAHandler.h  NsaReader.cpp  ONScripter.cpp  ONScripter_animation.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_sound.cpp  README.md  ScriptHandler.h  ScriptParser_command.cpp  Utils.h  gbk2utf16.h  nsadec.cpp  nscriptdecode.cpp  onscripter_main.cpp  resize_image.cpp  sardec.cpp  sjis2utf16.cpp  vcpkg.json  version.h
.github/workflows/: build_android.yml  build_darwin.yml  build_linux.yml  build_web.yml  build_win.yml  build_win_msvc.yml
asset/: icon1.rc
builtin_dll/: ONScripter_effect_cascade.cpp  layer_oldmovie.cpp
docker/: Dockerfile_android  Dockerfile_emcc  Dockerfile_linuxarm64  Dockerfile_linuxx64  Dockerfile_mingw64  docker_android.sh  docker_emcc.sh  docker_linuxarm64.sh  docker_linuxx64.sh  docker_mingw64.sh
renderer/: gles2funcs.h
renderer/shader/: post_cas.h
script/: _android.sh  _fetch.sh  _fetchports.sh  _linux32.sh  _linux64.sh  _linuxa32.sh  _linuxa64.sh  _llvmmingw32.sh  _llvmmingw64.sh  _mingw32.sh  _mingw64.sh  cross_android.sh  cross_linux32.sh  cross_linux64.sh  cross_linuxa32.sh  cross_linuxa64.sh  cross_llvmmingw32.sh  cross_llvmmingw64.sh  cross_mingw32.sh  cross_mingw64.sh  cross_web.sh  local_darwin.sh  local_linux32.sh  local_linux64.sh  local_mingw32.sh  local_mingw64.sh  local_msys2mingw32.sh  local_msys2mingw64.sh
simd/: int16x8.h  int16x8.inl  int8x16.inl
src/onsjh/: AVIWrapper.h  AnimationInfo.h  DirectReader.cpp  DirectReader.h  DirtyRect.cpp  DirtyRect.h  FontInfo.cpp  FontInfo.h  LUAHandler.cpp  NsaReader.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_image.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  Parallel.h  SarReader.cpp  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  Utils.h  coding2utf16.h  conv_shared.cpp  gbk2utf16.cpp  gbk2utf16.h  onscripter_main.cpp  simple_aviplay.cpp  sjis2utf16.cpp  sjis2utf16.h
src/onsjh/builtin_dll/: ONScripter_effect_trig.cpp  layer_snow.cpp
src/onsjh/renderer/: gles_renderer.cpp  gles_renderer.h
src/onsjh/simd/: int16x16.h  int16x16.inl  int32x4.inl  int8x32.h  int8x8.h  simd.h  vec128.inl  vec256.h
src/onsjh_web/: ons_yuri.html
src/onsyuri/: AVIWrapper.cpp  AnimationInfo.h  BaseReader.h  ButtonLink.h  DirectReader.cpp  DirtyRect.h  FontInfo.cpp  FontInfo.h  LUAHandler.cpp  NsaReader.cpp  NsaReader.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_effect.cpp  ONScripter_effect_breakup.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_image.cpp  ONScripter_lut.cpp  ONScripter_rmenu.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  Parallel.cpp  Parallel.h  README.md  README.old  SarReader.cpp  SarReader.h  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  Utils.h  builtin_layer.h  coding2utf16.cpp  coding2utf16.h  (+7 more)
src/onsyuri/builtin_dll/: layer_oldmovie.cpp  layer_snow.cpp
src/onsyuri/renderer/: gles_renderer.cpp  gles_renderer.h
src/onsyuri/simd/: int16x4.h  int16x4.inl  int16x8.inl  int32x2.h  int32x4.h  int8x16.h  int8x16.inl  int8x32.inl  int8x4.h  int8x4.inl  int8x8.inl  simd.h  vec128.h  vec256.inl
src/onsyuri/tool/: nsaconv.cpp  sarconv.cpp
src/onsyuri_android/: build.gradle  settings.gradle
src/onsyuri_android/app/: AndroidManifest.xml  build.gradle  proguard-rules.pro  sign.jks
src/onsyuri_android/app/cpp/: CMakeLists.txt
src/onsyuri_android/app/java/com/yuri/onscripter/: MainActivity.java  ONScripter.java  SafFile.java
src/onsyuri_android/app/java/org/libsdl/app/: SDLActivity.java
src/onsyuri_android/app/res/layout/: activity_main.xml  layout_gameconfig.xml  layout_gamedetail.xml  layout_gameinfo.xml
src/onsyuri_android/app/res/values/: colors.xml  strings.xml  themes.xml
src/onsyuri_android/app/res/values-night/: colors.xml  themes.xml
src/onsyuri_android/app/res/xml/: file_paths.xml
src/onsyuri_android/gradle/wrapper/: gradle-wrapper.properties
src/onsyuri_libretro/: CMakeLists.txt  SDL_libretro.c  SDL_libretro.h  cursor_png.h  libretro.cpp  onsyuri_libretro.info
src/onsyuri_web/: dummy.c  onsyuri.html  onsyuri_fs.js  onsyuri_index.py
triplets/: arm-windows-static.cmake  toolchain-arm.cmake
triplets/community/: arm-windows-static.cmake  toolchain-arm.cmake
